# autopar

./: CMakeLists.txt  README.md
inc/: concepts.hpp  consumers.hpp  frontend_actions.hpp  visitors.hpp
samples/: foo.cpp  quicksort.cpp  serial_md  serial_qs
src/: TaskCreationVisitor.cpp  concepts.cpp  concepts.hpp  consumers.hpp  frontendactions.hpp  main.cpp  visitors.hpp
